# prism-199

./: CREDITS.md  Cargo.toml  README.md  disk.json
disk/: edit.wasm  file.prog
src/: input.rs  main.rs  runtime.rs  rw_cursor.rs  vfs.rs
