[package]
name = "prism-199"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
winit_input_helper = "0.12.0"
pixels = "0.9.0"

wasmer = { version = "2.3.0" }

serde = "1.0.139"
serde_json = "1.0.82"
anyhow = "1.0.58"
lazy_static = "1.4.0"
regex = "1.6.0"
